--- a/_sass/_dark-mode.scss
+++ b/_sass/_dark-mode.scss
@@ -37,6 +37,8 @@
   --color-modal-bg: #fff;
   --color-modal-overlay: rgba(255, 255, 255, 0.85);
   --color-navicon: #fff;
+  --color-badge-bg: #d9eef5;
+  --color-badge-text: #2e7d96;
 
   /* Syntax token colors (Solarized Light) */
   --syntax-comment: #93a1a1;
@@ -83,6 +85,8 @@
   --color-modal-bg: #1e293b;
   --color-modal-overlay: rgba(0, 0, 0, 0.75);
   --color-navicon: #d4d4d8;
+  --color-badge-bg: #1a3a4a;
+  --color-badge-text: #67d4e8;
 
   /* Syntax token colors (dark-adapted) */
   --syntax-comment: #6b7280;
